# css2-llm-integration

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-postgres  README.md  docker-compose-simple.yaml  docker-compose.yaml  pyproject.toml  test_experiment_config.toml
.github/workflows/: docker-image.yml
css2_llm_integration/: entry.py  llm_adaptor.py  templates.py
css2_llm_integration/adaptors/: __init__.py  hf_adaptor.py  openai_adaptor.py  tool_calling.py
css2_llm_integration/api/: api.py  graphql.py
css2_llm_integration/automation/: Experiment.py  entry_scriptable.py  experiment_config.py
css2_llm_integration/data_layer/: DBContextManager.py  tool_calling.py
css2_llm_integration/templates/: determine_query_kind.txt  reviews_analyse_reviews.txt  reviews_pull_data.txt  sales_format_data.txt  sales_translate_user_query.txt
database_schema/: 00-init.sql  1-customer.sql  1-modifier.sql  1-product.sql  1-store.sql  2-product-review.sql  2-sale.sql  99-copy-all.sql  init.sql  modifier.sql  product.sql  sale.sql  store.sql
database_setup_scripts/: add_dummy_data.py  rebuild_db.sh
db_build_scripts/: add_dummy_data.py  build_data.sh  rebuild_db.sh
example_data/: 0-customer.csv  0-modifier.csv  0-product.csv  1-product_modifier.csv  2-sale_item.csv  3-sale_item_modifier.csv  4-product_review.csv  customer.csv  modifier.csv  product.csv  product_modifier.csv  sale.csv  sale_item.csv  sale_item_modifier.csv  store.csv
