[tool.poetry]
name = "css2-llm-integration"
version = "0.1.0"
description = ""
authors = ["Navrin <navman360@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
openai = "^1.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
